--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "prop-types": "^15.8.1",
+    "rollup": "^4.30.1",
     "vite": "^6.0.5"
   }
 }
